--- a/la-note-enchantee-menu-card.html
+++ b/la-note-enchantee-menu-card.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./css/style.css" />
-    <title> A la Française</title>
+    <title> La note enchantée</title>
 
 </head>
 <body class="main">
