--- a/la-note-enchantee-menu-card.html
+++ b/la-note-enchantee-menu-card.html
@@ -159,7 +159,7 @@
         <article class="menu__bloc delay2">
             <div class="menu__bloc--detail">
                 <h3 class="bloc-detail__title">Baba au rhum revisité</h3>
-                <p class="bloc-detail__text">Avec son coulis de citron/p>
+                <p class="bloc-detail__text">Avec son coulis de citron</p>
             </div>
             <div class="menu__prix">
                 <p >22€</p>
