--- a/a-la-francaise-menu-card.html
+++ b/a-la-francaise-menu-card.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./css/style.css" />
-    <title> A la Française</title>
+    <title> À  la Française</title>
 
 </head>
 <body class="main">
@@ -20,13 +20,13 @@
 </div>
 
 <div class="banniere">
-    <img class="banniere__image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+    <img class="banniere__image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
 </div>
 
 
 <section class="menu">
     <div class="menu__heart">
-        <h1 class="menu__title">A la Française</h1>
+        <h1 class="menu__title">À la Française</h1>
         <i class="far fa-heart fa-lg menu__heart--icone "></i>
         <i class="fas fa-heart fa-lg  menu__heart--effect"></i>
     </div>
