--- a/la-palette-du-gout-menu-card.html
+++ b/la-palette-du-gout-menu-card.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="banniere">
-    <img class="banniere__image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+    <img class="banniere__image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
 </div>
 
 
@@ -37,7 +37,7 @@
         <article class="menu__bloc delay1">
             <div class="menu__bloc--detail">
                 <h3 class="bloc-detail__title">Fricassée d'escargots</h3>
-                <p class="bloc-detail__text">Au piment d'Espelette/p>
+                <p class="bloc-detail__text">Au piment d'Espelette</p>
             </div>
             <div class="menu__prix">
                 <p >25€</p>
