ajout du lien vers une adresse mail dans la partie contact du footer dans le fichier index.html

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <a class="footer__nav--litletext">
                 Mentions Légales
             </a>
-            <a class="footer__nav--litletext">
+            <a href="mailto:votreadresse@mail.fr" class="footer__nav--litletext">
                 Contact
             </a>
 
