ajout d'une nouvelle div avec un class menu-container au dessus de la section menu dans le fichier la palette du gout menu card.html

--- a/la-palette-du-gout-menu-card.html
+++ b/la-palette-du-gout-menu-card.html
@@ -23,8 +23,8 @@
     <img class="banniere__image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
 </div>
 
-
-<section class="menu">
+<div class="menu-container">
+<section class="menu">   
     <div class="menu__heart">
         <h1 class="menu__title">La palette du goût</h1>
         <i class="far fa-heart fa-lg menu__heart--icone "></i>
@@ -174,8 +174,8 @@
     <a href="#" class="header-buton menu-btn-commander">
         <p class="buton--text">Commander</p>
     </a>
-
 </section>
+</div>
 
 <footer class="footer">
     <h4 class="footer__title"> ohmyfood</h4>
