--- a/la-note-enchantee-menu-card.html
+++ b/la-note-enchantee-menu-card.html
@@ -9,7 +9,7 @@
     <title> La note enchantée</title>
 
 </head>
-<body class="main">
+<div class="main">
 
 
 <div class="logo-container__image">
@@ -23,7 +23,7 @@
     <img class="banniere__image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
 </div>
 
-
+<div class="menu-container">
 <section class="menu">
     <div class="menu__heart">
         <h1 class="menu__title">La note enchantée</h1>
@@ -188,8 +188,8 @@
     <a href="#" class="header-buton menu-btn-commander">
         <p class="buton--text">Commander</p>
     </a>
-
 </section>
+</div>
 
 <footer class="footer">
     <h4 class="footer__title"> ohmyfood</h4>
