ajout de la nouvelle div avec la class menu-container au dessus de la balise section avec la class menu dans le fichier a la francaise menu card.html

--- a/a-la-francaise-menu-card.html
+++ b/a-la-francaise-menu-card.html
@@ -9,7 +9,7 @@
     <title> À  la Française</title>
 
 </head>
-<body class="main">
+<div class="main">
 
 
 <div class="logo-container__image">
@@ -23,7 +23,7 @@
     <img class="banniere__image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
 </div>
 
-
+<div class="menu-container">
 <section class="menu">
     <div class="menu__heart">
         <h1 class="menu__title"> À la Française</h1>
@@ -174,8 +174,8 @@
     <a href="#" class="header-buton menu-btn-commander">
         <p class="buton--text">Commander</p>
     </a>
-
 </section>
+</div>
 
 <footer class="footer">
     <h4 class="footer__title"> ohmyfood</h4>
