--- a/le-delice-des-sens-menu-card.html
+++ b/le-delice-des-sens-menu-card.html
@@ -9,7 +9,7 @@
     <title> Le délice des sens</title>
 
 </head>
-<body class="main">
+<div class="main">
 
 
 <div class="logo-container__image">
@@ -23,7 +23,7 @@
     <img class="banniere__image" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
 </div>
 
-
+<div class="menu-container">
 <section class="menu">
     <div class="menu__heart">
         <h1 class="menu__title">Le délice des sens</h1>
@@ -174,8 +174,8 @@
     <a href="#" class="header-buton menu-btn-commander">
         <p class="buton--text">Commander</p>
     </a>
-
 </section>
+</div>
 
 <footer class="footer">
     <h4 class="footer__title"> ohmyfood</h4>
