--- a/la-palette-du-gout-menu-card.html
+++ b/la-palette-du-gout-menu-card.html
@@ -16,11 +16,11 @@
     <a href="./index.html" class="arrow">
         <i class="fas fa-arrow-left fa-lg"></i>
     </a>
-    <a href=""><img class="logo__style"  src="./images/logo/ohmyfood@2x.svg" alt="Logo Oh My Food"></a>
+    <a href="./index.html"><img class="logo__style"  src="./images/logo/ohmyfood@2x.svg" alt="Logo du site ohmyfood"></a>
 </div>
 
 <div class="banniere">
-    <img class="banniere__image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+    <img class="banniere__image" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image représentant une assiette dans un restaurant">
 </div>
 
 <div class="menu-container">
