supression d'erreurs dans le fichier la note enchantee menu card.html

--- a/la-note-enchantee-menu-card.html
+++ b/la-note-enchantee-menu-card.html
@@ -18,6 +18,7 @@
     </a>
     <a href="./index.html"><img class="logo__style"  src="./images/logo/ohmyfood@2x.svg" alt="Logo du site ohmyfood"></a>
 </div>
+</div>
 
 <div class="banniere">
     <img class="banniere__image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image représentant une assiette dans un restaurant">
@@ -219,4 +220,5 @@
 
 
 </body>
+
 </html>
