supression d'erreurs dans le fichier a la francaise menu card.html

--- a/a-la-francaise-menu-card.html
+++ b/a-la-francaise-menu-card.html
@@ -18,6 +18,7 @@
     </a>
     <a href="./index.html"><img class="logo__style"  src="./images/logo/ohmyfood@2x.svg" alt="Logo du site ohmyfood"></a>
 </div>
+</div>
 
 <div class="banniere">
     <img class="banniere__image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image représentant une assiette dans un restaurant">
@@ -183,7 +184,7 @@
     <nav class="footer__nav">
         <a href="" class="footer__nav--maintext">
             <i class="fas fa-utensils"></i>Proposer un restaurant</a>
-        </a>
+        
 
         <a class="footer__nav--maintext">
             <i class="fas fa-hands-helping"></i> Devenir partenaire
