--- a/le-delice-des-sens-menu-card.html
+++ b/le-delice-des-sens-menu-card.html
@@ -18,6 +18,7 @@
     </a>
     <a href="./index.html"><img class="logo__style"  src="./images/logo/ohmyfood@2x.svg" alt="Logo du site ohmyfood"></a>
 </div>
+</div>
 
 <div class="banniere">
     <img class="banniere__image" src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image représentant une assiette dans un restaurant">
