--- a/la-note-enchantee-menu-card.html
+++ b/la-note-enchantee-menu-card.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./css/style.css" />
-    <title> À  la Française</title>
+    <title> La note enchantée</title>
 
 </head>
 <div class="main">
@@ -21,28 +21,29 @@
 </div>
 
 <div class="banniere">
-    <img class="banniere__image" src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image représentant une assiette dans un restaurant">
+    <img class="banniere__image" src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image représentant une assiette dans un restaurant">
 </div>
 
 <div class="menu-container">
 <section class="menu">
     <div class="menu__heart">
-        <h1 class="menu__title"> À la Française</h1>
+        <h1 class="menu__title">La note enchantée</h1>
         <i class="far fa-heart fa-lg menu__heart--icone "></i>
         <i class="fas fa-heart fa-lg  menu__heart--effect"></i>
     </div>
-    
+
     <div class="menu__area">
         <h2 class="menu__line--text">Entrées</h2>
         <div class="menu__line">
         </div>
     </div>
 
+
     <div class="menu__entree">
         <article class="menu__bloc delay1">
             <div class="menu__bloc--detail">
-                <h3 class="bloc-detail__title">Tartare de poulpe acidulé</h3>
-                <p class="bloc-detail__text">Au zests d'orange</p>
+                <h3 class="bloc-detail__title">Ravioles de foie gras</h3>
+                <p class="bloc-detail__text">Accompagnées de leur crème à la truffe</p>
             </div>
             <div class="menu__prix">
                 <p>25€</p>
@@ -55,8 +56,8 @@
         </article>
         <article class="menu__bloc delay2">
             <div class="menu__bloc--detail">
-                <h3 class="bloc-detail__title">Velouté de légumes d'antan</h3>
-                <p class="bloc-detail__text">Carotte, panais, topinambour</p>
+                <h3 class="bloc-detail__title">Caviar osciètre</h3>
+                <p class="bloc-detail__text">Sur blini à la farine de blé noir</p>
             </div>
             <div class="menu__prix">
                 <p>35€</p>
@@ -69,8 +70,8 @@
         </article>
         <article class="menu__bloc delay3">
             <div class="menu__bloc--detail">
-                <h3 class="bloc-detail__title">Soupe à l'oignon</h3>
-                <p class="bloc-detail__text">Revisitée</p>
+                <h3 class="bloc-detail__title">Homard et espuma de potiron</h3>
+                <p class="bloc-detail__text">Marinés aux zestes d'orange</p>
             </div>
             <div class="menu__prix">
                 <p>20€</p>
@@ -82,7 +83,21 @@
             </div>
         </article>
     </div>
-   
+    <article class="menu__bloc delay4">
+        <div class="menu__bloc--detail">
+            <h3 class="bloc-detail__title">Foie gras de canard cuit entier</h3>
+            <p class="bloc-detail__text">Confiture de figue et pain toasté</p>
+        </div>
+        <div class="menu__prix">
+            <p>35€</p>
+        </div>
+        <div class="menu__bloc--effect">
+            <div>
+                <i class="far fa-check-circle menu__bloc--icone"></i>
+            </div>
+        </div>
+    </article>
+
     <div class="menu__area">
         <h2 class="menu__line--text">Plats</h2>
         <div class="menu__line">
@@ -92,8 +107,8 @@
     <div class="menu__entree">
         <article class="menu__bloc delay1">
             <div class="menu__bloc--detail">
-                <h3 class="bloc-detail__title">Coquilles Saint-Jacques</h3>
-                <p class="bloc-detail__text">Accompagnées d'une purée de panais</p>
+                <h3 class="bloc-detail__title">Noix de coquilles Saint-Jacques</h3>
+                <p class="bloc-detail__text">Sur lit de purée de céléri-rave</p>
             </div>
             <div class="menu__prix">
                 <p>40€</p>
@@ -106,8 +121,8 @@
         </article>
         <article class="menu__bloc delay2">
             <div class="menu__bloc--detail">
-                <h3 class="bloc-detail__title">Magret de canard</h3>
-                <p class="bloc-detail__text">Et parmentier de pommes de terres</p>
+                <h3 class="bloc-detail__title">Langoustine poêlée</h3>
+                <p class="bloc-detail__text">Purée de patate douce</p>
             </div>
             <div class="menu__prix">
                 <p>35€</p>
@@ -120,11 +135,11 @@
         </article>
         <article class="menu__bloc delay3">
             <div class="menu__bloc--detail">
-                <h3 class="bloc-detail__title">Pigeonneau d'Ille-et-Vilaine</h3>
-                <p class="bloc-detail__text">Sur son lit de gnochis aux légumes</p>
+                <h3 class="bloc-detail__title">Mijoté de queue de boeuf</h3>
+                <p class="bloc-detail__text">Et riz sauvage aux zestes de citron</p>
             </div>
             <div class="menu__prix">
-                <p>44€</p>
+                <p>45€</p>
             </div>
             <div class="menu__bloc--effect">
                 <div>
@@ -138,12 +153,12 @@
             <h2 class="menu__line--text">Desserts</h2>
         </div>
     </div>
-    
+
     <div class="menu__entree">
         <article class="menu__bloc delay1">
             <div class="menu__bloc--detail">
-                <h3 class="bloc-detail__title">Pétales de violettes glacés</h3>
-                <p class="bloc-detail__text">Et purée de noisettes</p>
+                <h3 class="bloc-detail__title">Macaron noisette et chocolat</h3>
+                <p class="bloc-detail__text">Glace au caramel brun et sel de Guérande</p>
             </div>
             <div class="menu__prix">
                 <p>18€</p>
@@ -156,11 +171,11 @@
         </article>
         <article class="menu__bloc delay2">
             <div class="menu__bloc--detail">
-                <h3 class="bloc-detail__title">Fondant au chocolat</h3>
-                <p class="bloc-detail__text">Revisité</p>
+                <h3 class="bloc-detail__title">Baba au rhum revisité</h3>
+                <p class="bloc-detail__text">Avec son coulis de citron</p>
             </div>
             <div class="menu__prix">
-                <p >22€</p>
+                <p>22€</p>
             </div>
             <div class="menu__bloc--effect">
                 <div>
@@ -170,8 +185,8 @@
         </article>
         <article class="menu__bloc delay3">
             <div class="menu__bloc--detail">
-                <h3 class="bloc-detail__title">Millefeuille croustillant</h3>
-                <p class="bloc-detail__text">Myrtilles et pâte d'amande</p>
+                <h3 class="bloc-detail__title">Tarte au citron meringuée</h3>
+                <p class="bloc-detail__text">Destructurée</p>
             </div>
             <div class="menu__prix">
                 <p>23€</p>
@@ -217,4 +232,5 @@
 
 
 </body>
+
 </html>
